[gd_scene load_steps=23 format=2]

[ext_resource path="res://Actor/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actor/enemies/Flying_enemy/Flying_enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemy_02_Attack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy_02.png" type="Texture" id=4]
[ext_resource path="res://Bullet/Enemy_bullet.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "Shoot"
length = 0.875
step = 0.125
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Wander"
length = 0.375
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=15]
radius = 243.896

[sub_resource type="CircleShape2D" id=17]
radius = 196.315

[node name="Flying_enemy" instance=ExtResource( 1 )]
position = Vector2( 245.722, 221.75 )
collision_layer = 16
collision_mask = 17
script = ExtResource( 2 )
bullet = ExtResource( 5 )

[node name="Sprite" parent="Body" index="0"]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body" index="1"]
scale = Vector2( -1, 1 )
frames = SubResource( 13 )
animation = "Attack"
frame = 1

[node name="AnimationPlayer" parent="Body" index="2"]
anims/Shoot = SubResource( 14 )
anims/Wander = SubResource( 16 )

[node name="Down_raycast" parent="Body" index="4"]
enabled = false

[node name="bullet_spawner" type="Position2D" parent="Body" index="5"]
position = Vector2( 14.316, 19.8138 )

[node name="CollisionShape2D" parent="Areas/Detect_area" index="0"]
visible = true
shape = SubResource( 15 )

[node name="Shoot_area" type="Area2D" parent="Areas" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Shoot_area" index="0"]
shape = SubResource( 17 )

[node name="Reload_timer" type="Timer" parent="." index="5"]

[connection signal="animation_finished" from="Body/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Areas/Shoot_area" to="." method="_on_Shoot_area_body_entered"]
[connection signal="body_exited" from="Areas/Shoot_area" to="." method="_on_Shoot_area_body_exited"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
